Move raw files into _source and build into toplevel

--- a/css/default.css
+++ b/css/default.css
@@ -1,84 +1,1 @@
-html {
-  background-color: rgba(16, 20, 26, 1)
-}
-
-body {
-    color: black;
-    font-size: 16px;
-    margin: 0px auto 0px auto;
-    width: 900px;
-    padding: 33px;
-    background-color: rgba(252, 251, 249, 1);
-}
-
-div#header {
-    border-bottom: 2px solid black;
-    margin-bottom: 30px;
-    padding: 12px 0px 12px 0px;
-}
-
-div#logo a {
-    color: black;
-    float: left;
-    font-size: 18px;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-div#header #navigation {
-    text-align: right;
-}
-
-div#header #navigation a {
-    color: black;
-    font-size: 18px;
-    font-weight: bold;
-    margin-left: 12px;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-div#footer {
-    border-top: solid 2px black;
-    color: #555;
-    font-size: 12px;
-    margin-top: 30px;
-    padding: 12px 0px 12px 0px;
-    text-align: right;
-}
-
-h1 {
-    font-size: 24px;
-}
-
-h2 {
-    font-size: 20px;
-}
-
-div.info {
-    color: #555;
-    font-size: 14px;
-    font-style: italic;
-}
-
-.work {
-  text-align: center;
-}
-
-.post-list .matte {
-  margin: auto;
-}
-
-.title {
-  clear: both;
-  text-align: center;
-}
-
-ul {
-  padding: 0;
-}
-
-li {
-  list-style: none;
-}
-
+html{background-color:rgba(16, 20, 26, 1)}body{color:black;font-size:16px;margin:0px auto 0px auto;width:900px;padding:33px;background-color:rgba(252, 251, 249, 1)}div#header{border-bottom:2px solid black;margin-bottom:30px;padding:12px 0px 12px 0px}div#logo a{color:black;float:left;font-size:18px;font-weight:bold;text-decoration:none}div#header #navigation{text-align:right}div#header #navigation a{color:black;font-size:18px;font-weight:bold;margin-left:12px;text-decoration:none;text-transform:uppercase}div#footer{border-top:solid 2px black;color:#555;font-size:12px;margin-top:30px;padding:12px 0px 12px 0px;text-align:right}h1{font-size:24px}h2{font-size:20px}div.info{color:#555;font-size:14px;font-style:italic}.work{text-align:center}.post-list .matte{margin:auto}.title{clear:both;text-align:center}ul{padding:0}li{list-style:none}
