--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8"></meta>
     <title>qxjit || David Vollbracht</title>
-    <link href="/style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet" type="text/css">
+
+    <noscript>
+      <link href="/nojs.css" rel="stylesheet" type="text/css">
+    </noscript>
     <script src="/tiny.min.js" type="text/javascript"></script>
     <script src="/main.js" type="text/javascript"></script>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300' rel='stylesheet' type='text/css'>
