--- a/layouts/index.html
+++ b/layouts/index.html
@@ -71,7 +71,7 @@
             I have a wife, son, and daughter who bring me
             joy every day. Our children don't look it, but they are
             1/4 Japanese, so teaching them the language is
-            important to us. We hope to take them to the Japan soon.
+            important to us. We hope to take them to Japan soon.
           </p>
         </div>
       </div>
